@@ -9,12 +9,6 @@
 -module(exmpp_utils).
 -vsn('$Revision$').
 
-% Base64 helpers.
--export([
-  encode_base64/1,
-  decode_base64/1
-]).
-
 % List helpers.
 -export([
   keystore/4
@@ -31,44 +25,6 @@
   random_id/0,
   random_id/1
 ]).
-
-% --------------------------------------------------------------------
-% Base64 helpers.
-% --------------------------------------------------------------------
-
-%% @spec (Data) -> Base64
-%%     Data = string()
-%%     Base64 = string()
-%% @doc Encode `Data' in Base64.
-
--ifdef(ENABLE_HTTP_BASE_64).
-% Starting with inets 5.0, http_base_64 doesn't exist anymore.
-encode_base64(Data) ->
-    case catch http_base_64:encode(Data) of
-        {'EXIT', _} -> base64:encode_to_string(Data);
-        Base64      -> Base64
-    end.
--else.
-encode_base64(Data) ->
-    base64:encode_to_string(Data).
--endif.
-
-%% @spec (Base64) -> Data
-%%     Base64 = string()
-%%     Data = string()
-%% @doc Decode `Base64' to get `Data' back.
-
--ifdef(ENABLE_HTTP_BASE_64).
-% Starting with inets 5.0, http_base_64 doesn't exist anymore.
-decode_base64(Base64) ->
-    case catch http_base_64:decode(Base64) of
-        {'EXIT', _} -> base64:decode_to_string(Base64);
-        Data        -> Data
-    end.
--else.
-decode_base64(Base64) ->
-    base64:decode_to_string(Base64).
--endif.
 
 % --------------------------------------------------------------------
 % List helpers.
